codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__chat_composer__tests__backspace_after_pastes.snap
---
source: tui2/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ [Pasted Content 1002 chars][Pasted Content 1004 chars]                                           │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"  ██████████ 100% left                                                                              "
