codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__chat_composer__tests__slash_popup_res.snap
---
source: tui2/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────╮"
"│ /res                                                     │"
"╰──────────────────────────────────────────────────────────╯"
"  ╭─ Commands ──────────────────────────────────────────────"
"  │ /res  ·  tab complete  ·  enter run  ·  esc close      │"
"  ╰────────────────────────────────────────────────────────╯"
